# ruri

./: .gitignore  .ninja_deps  .ninja_log  1.patch  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  arm64.sh  autogen.sh  build.sh  check_flag.c  cmake_install.cmake  config.h  config.h.in  config.status  config_cmake.h.in  configure  configure.ac  configure~  nohup.out
.github/workflows/: build.yml  check.yml  cmake.yml  deb.yml  test.yml
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.2  traces.3
debian/: changelog  control  rules
include/: ruri.h
patch/: 0001-Fix-debian-build.patch
src/: chroot.c  config.c  env.c  info.c  k2v.c  mount.c  passwd.c  ps.c  ruri.c  seccomp.c  signal.c  umount.c
src/.deps/: caplist.Po  cgroup.Po  chroot.Po  config.Po  cprintf.Po  elf-magic.Po  info.Po  k2v.Po  main.Po  mount.Po  passwd.Po  ps.Po  rootless.Po  rurienv.Po  rurifetch.Po  seccomp.Po  signal.Po  umount.Po  unshare.Po
src/easteregg/.deps/: action.Po  layer.Po  nekofeng.Po  typewriter.Po
src/include/: k2v.h  ruri.h  version.h
test/: CMakeLists.txt  Makefile  Makefile.test  global.sh  init-root-test.sh  log.sh  main.cpp  rootfstool  test-root.sh  test.cpp  test.mk
